0032810: Coding - missing Standard_EXPORT in Standard_ErrorHandler